tests/baselines/reference/jsxInExtendsClause.errors.txt
jsxInExtendsClause.tsx(9,12): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxInExtendsClause.tsx(9,31): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.


==== jsxInExtendsClause.tsx (2 errors) ====
    // https://github.com/Microsoft/TypeScript/issues/13157
    declare namespace React {
      interface ComponentClass<P> { new (): Component<P, {}>; }
      class Component<A, B> {}
    }
    declare function createComponentClass<P>(factory: () => React.ComponentClass<P>): React.ComponentClass<P>;
    class Foo extends createComponentClass(() => class extends React.Component<{}, {}> {
      render() {
        return <span>Hello, world!</span>;
               ~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
                                  ~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
      }
    }) {}